- исправление замечаний PR